--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
 
     <!-- Awal Map -->
     <section>
-        
-        <div id="map"></div>
-        <div>
-            
+        <div id="overlay" class="overlay"></div>
+        <div id="mapContainer">
+            <div id="map"></div>
+        </div>
         </div>
     </section>
 
