--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
         <div class="container">
           <div class="row text-center mb-3">
             <div class="col">
-              <h2>About Us</h2>
+              <h2>Anggota Tim</h2>
             </div>
           </div>
           <div class="row">
