--- a/table.html
+++ b/table.html
@@ -6,16 +6,14 @@
 		<title>Pemetaan Kota Semarang</title>
 		<link
 			href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
-			rel="stylesheet"
-			integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
-			crossorigin="anonymous" />
+			rel="stylesheet" />
 		<link href="colongan.css" rel="stylesheet" />
 	</head>
 	<body id="page-top">
 		<div id="content" style="margin: 50px">
 			<div class="card-header py-3">
 				<h4 class="m-0 font-weight-bold text-primary float-left">
-					List Lokasi Wisata Kota Semarang
+					List Wisata Kota Semarang
 				</h4>
 			</div>
 			<div class="card-body">
@@ -38,41 +36,97 @@
 						<tbody id="table-body"></tbody>
 					</table>
 				</div>
+				<div
+					id="pagination"
+					class="mt-4 d-flex justify-content-center align-items-center"></div>
 				<div id="details" class="mt-4">
-					<div
-						id="details-content"
-						class="row align-items-center border rounded p-5"></div>
+					<div id="details-content"></div>
 				</div>
 			</div>
 		</div>
 
 		<script>
 			let locations = [];
+			let currentPage = 1;
+			const itemsPerPage = 5;
 
-			// Function to fetch location data from JSON file
 			async function fetchLocations() {
 				const response = await fetch("mockdb.json");
 				locations = await response.json();
 				populateTable();
+				setupPagination();
 			}
 
-			// Function to populate the table
 			function populateTable() {
 				const tableBody = document.getElementById("table-body");
-				locations.forEach((location) => {
+				tableBody.innerHTML = ""; // Clear previous entries
+				const startIndex = (currentPage - 1) * itemsPerPage;
+				const endIndex = startIndex + itemsPerPage;
+				const paginatedLocations = locations.slice(startIndex, endIndex);
+
+				paginatedLocations.forEach((location) => {
 					const row = document.createElement("tr");
 					row.innerHTML = `
-                  <td class="text-center">${location.id}</td>
-                  <td>${location.name}</td>
-                  <td>${location.category}</td>
-                  <td>${location.address}</td>
-                  <td>Rp${location.price},00</td>
-                  <td>
-                      <button type="button" class="btn btn-primary" onclick="showDetails(${location.id})">Details</button>
-                  </td>
-              `;
+                    <td class="text-center">${location.id}</td>
+                    <td>${location.name}</td>
+                    <td>${location.category}</td>
+                    <td>${location.address}</td>
+                    <td>Rp${location.price},00</td>
+                    <td>
+                        <button type="button" class="btn btn-primary" onclick="showDetails(${location.id})">Details</button>
+                    </td>
+                `;
 					tableBody.appendChild(row);
 				});
+			}
+
+			function setupPagination() {
+				const pagination = document.getElementById("pagination");
+				pagination.innerHTML = ""; // Clear previous pagination
+				const totalPages = Math.ceil(locations.length / itemsPerPage);
+
+				// Previous Button
+				const prevButton = document.createElement("button");
+				prevButton.innerText = "Previous";
+				prevButton.className = "btn btn-secondary mx-1";
+				prevButton.disabled = currentPage === 1; // Disable if on the first page
+				prevButton.onclick = () => {
+					if (currentPage > 1) {
+						currentPage--;
+						populateTable();
+						setupPagination();
+					}
+				};
+				pagination.appendChild(prevButton);
+
+				// Page Number Buttons
+				for (let i = 1; i <= totalPages; i++) {
+					const pageButton = document.createElement("button");
+					pageButton.innerText = i;
+					pageButton.className = `btn mx-1 ${
+						i === currentPage ? "btn-primary" : "btn-secondary"
+					}`;
+					pageButton.onclick = () => {
+						currentPage = i;
+						populateTable();
+						setupPagination();
+					};
+					pagination.appendChild(pageButton);
+				}
+
+				// Next Button
+				const nextButton = document.createElement("button");
+				nextButton.innerText = "Next";
+				nextButton.className = "btn btn-secondary mx-1";
+				nextButton.disabled = currentPage === totalPages; // Disable if on the last page
+				nextButton.onclick = () => {
+					if (currentPage < totalPages) {
+						currentPage++;
+						populateTable();
+						setupPagination();
+					}
+				};
+				pagination.appendChild(nextButton);
 			}
 
 			function showDetails(id) {
@@ -89,12 +143,12 @@
 					.map((image) => `<img id="data-images" src="${image}" alt="alt" />`)
 					.join("");
 				detailsContent.innerHTML = `
-			        <div class="col-md-6">
-								<h2>${location.name}</h2>
-								<p>${location.category}</p>
-								<p>${location.description}</p>
+						<div class="row align-items-center border rounded p-5">
+							<div class="col-md-6">
+									<h2><strong>${location.name}</strong></h2>
+									<p class="text-primary"><strong>${location.category}</strong></p>
+									<p>${location.description}</p>
 							</div>
-
 							<div class="col-md-6 d-flex flex-column">
 								<div class="ms-auto">
 									<button class="btn btn-danger mb-3" onclick="hideDetails()">Close</button>
@@ -103,14 +157,15 @@
 								<p>Price: ${location.price}</p>
 								<p>Jam Buka: ${location.openHours}</p>
 							</div>
-
 							<div class="d-flex justify-content-center mt-4">
-								<img id="data-thumbnail" src="${thumbnail}" alt="" />
+									<img id="data-thumbnail" src="${thumbnail}" alt="${location.name}" class="img-fluid" />
 							</div>
 							<div>
 								${dataImages}
 							</div>
-			      `;
+						</div
+            `;
+
 				document.getElementById("details").style.display = "block";
 			}
 
@@ -118,7 +173,7 @@
 				document.getElementById("details").style.display = "none";
 			}
 
-			window.onload = fetchLocations;
+			fetchLocations();
 		</script>
 	</body>
 </html>
