--- a/table.html
+++ b/table.html
@@ -4,6 +4,14 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Pemetaan Kota Semarang</title>
+
+		<!-- Fonts -->
+		<link href="https://fonts.googleapis.com" rel="preconnect" />
+		<link href="https://fonts.gstatic.com" rel="preconnect" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+			rel="stylesheet" />
+
 		<link
 			href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
 			rel="stylesheet"
@@ -21,7 +29,44 @@
 			}
 		</style>
 	</head>
-	<body id="page-top">
+	<body id="page-top" class="index-page">
+		<header id="header" class="header d-flex align-items-center fixed-top">
+			<div
+				class="container-fluid container-xl position-relative d-flex align-items-center justify-content-between">
+				<a href="index.html" class="logo d-flex align-items-center">
+					<h1 class="sitename">SEMAWIS</h1>
+				</a>
+
+				<nav id="navmenu" class="navmenu">
+					<ul>
+						<li><a href="index.html">Beranda</a></li>
+						<li class="dropdown">
+							<a
+								><span>Mengenal Semarang</span>
+								<i class="bi bi-chevron-down toggle-dropdown"></i
+							></a>
+							<ul>
+								<li><a href="index.html#mapssem">Peta Wisata</a></li>
+								<li><a href="#" class="active">List Wisata</a></li>
+								<li><a href="index.html#gallery">Galeri</a></li>
+							</ul>
+						</li>
+						<li><a href="index.html#team">Tentang Kami</a></li>
+						<li><a href="index.html#contact">Kontak</a></li>
+
+						<!-- Dark Mode Toggle with text change -->
+						<li class="nav-item theme-toggle">
+							<label class="theme-switch">
+								<input type="checkbox" id="theme-toggle" />
+								<span class="slider"></span>
+							</label>
+							<span id="mode-text">Light Mode</span>
+						</li>
+					</ul>
+					<i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
+				</nav>
+			</div>
+		</header>
 		<div id="content" style="margin: 50px">
 			<div class="card-header py-3">
 				<h4 class="m-0 font-weight-bold text-primary float-left">
@@ -45,7 +90,7 @@
 								<th>Action</th>
 							</tr>
 						</thead>
-						<tbody id="table-body"></tbody>
+						<tbody id="table-body" class=""></tbody>
 					</table>
 				</div>
 				<div
@@ -57,184 +102,42 @@
 			</div>
 		</div>
 
-		<script>
-			let locations = [];
-			let currentPage = 1;
-			const itemsPerPage = 5;
+		<footer id="footer" class="footer dark-background">
+			<div class="container">
+				<h3 class="sitename">SEMAWIS</h3>
+				<p>Satu Portal untuk Mengenal Semarang Lebih Dekat.</p>
+				<div class="social-links d-flex justify-content-center">
+					<a href=""><i class="bi bi-twitter-x"></i></a>
+					<a href=""><i class="bi bi-facebook"></i></a>
+					<a href=""><i class="bi bi-instagram"></i></a>
+					<a href=""><i class="bi bi-skype"></i></a>
+					<a href=""><i class="bi bi-linkedin"></i></a>
+				</div>
+				<div class="container">
+					<div class="copyright">
+						<span>Copyright</span>
+						<strong class="px-1 sitename">SEMAWIS</strong>
+						<span>All Rights Reserved</span>
+					</div>
+					<div class="credits">Dibuat dengan cinta ❤️ oleh Kelompok 4</div>
+				</div>
+			</div>
+		</footer>
 
-			async function fetchLocations() {
-				const response = await fetch("assets/js/mockdb.json");
-				locations = await response.json();
-				populateTable();
-				setupPagination();
-			}
+		<script src="assets/js/table.js"></script>
+		<!-- Vendor JS Files -->
+		<script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+		<script src="assets/vendor/php-email-form/validate.js"></script>
+		<script src="assets/vendor/aos/aos.js"></script>
+		<script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
+		<script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
+		<script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
+		<script
+			src="https://unpkg.com/leaflet@1.9.2/dist/leaflet.js"
+			integrity="sha256-o9N1jGDZrf5tS+Ft4gbIK7mYMipq9lqpVJ91xHSyKhg="
+			crossorigin=""></script>
 
-			function populateTable() {
-				const tableBody = document.getElementById("table-body");
-				tableBody.innerHTML = ""; // Clear previous entries
-				const startIndex = (currentPage - 1) * itemsPerPage;
-				const endIndex = startIndex + itemsPerPage;
-				const paginatedLocations = locations.slice(startIndex, endIndex);
-
-				paginatedLocations.forEach((location) => {
-					const row = document.createElement("tr");
-					row.innerHTML = `
-                    <td class="text-center">${location.id}</td>
-                    <td>${location.name}</td>
-                    <td>${location.category}</td>
-                    <td>${location.address}</td>
-                    <td>Rp${location.price},00</td>
-                    <td>
-                        <button type="button" class="btn btn-primary" onclick="showDetails(${location.id})">Details</button>
-                    </td>
-                `;
-					tableBody.appendChild(row);
-				});
-			}
-
-			function setupPagination() {
-				const pagination = document.getElementById("pagination");
-				pagination.innerHTML = ""; // Clear previous pagination
-				const totalPages = Math.ceil(locations.length / itemsPerPage);
-
-				// Previous Button
-				const prevButton = document.createElement("button");
-				prevButton.innerText = "Previous";
-				prevButton.className = "btn btn-secondary mx-1";
-				prevButton.disabled = currentPage === 1; // Disable if on the first page
-				prevButton.onclick = () => {
-					if (currentPage > 1) {
-						currentPage--;
-						populateTable();
-						setupPagination();
-					}
-				};
-				pagination.appendChild(prevButton);
-
-				// Page Number Buttons
-				for (let i = 1; i <= totalPages; i++) {
-					const pageButton = document.createElement("button");
-					pageButton.innerText = i;
-					pageButton.className = `btn mx-1 ${
-						i === currentPage ? "btn-primary" : "btn-secondary"
-					}`;
-					pageButton.onclick = () => {
-						currentPage = i;
-						populateTable();
-						setupPagination();
-					};
-					pagination.appendChild(pageButton);
-				}
-
-				// Next Button
-				const nextButton = document.createElement("button");
-				nextButton.innerText = "Next";
-				nextButton.className = "btn btn-secondary mx-1";
-				nextButton.disabled = currentPage === totalPages; // Disable if on the last page
-				nextButton.onclick = () => {
-					if (currentPage < totalPages) {
-						currentPage++;
-						populateTable();
-						setupPagination();
-					}
-				};
-				pagination.appendChild(nextButton);
-			}
-
-			function setupPagination() {
-				const pagination = document.getElementById("pagination");
-				pagination.innerHTML = ""; // Clear previous pagination
-				const totalPages = Math.ceil(locations.length / itemsPerPage);
-
-				// Previous Button
-				const prevButton = document.createElement("button");
-				prevButton.innerText = "Previous";
-				prevButton.className = "btn btn-secondary mx-1";
-				prevButton.disabled = currentPage === 1; // Disable if on the first page
-				prevButton.onclick = () => {
-					if (currentPage > 1) {
-						currentPage--;
-						populateTable();
-						setupPagination();
-					}
-				};
-				pagination.appendChild(prevButton);
-
-				// Page Number Buttons
-				for (let i = 1; i <= totalPages; i++) {
-					const pageButton = document.createElement("button");
-					pageButton.innerText = i;
-					pageButton.className = `btn mx-1 ${
-						i === currentPage ? "btn-primary" : "btn-secondary"
-					}`;
-					pageButton.onclick = () => {
-						currentPage = i;
-						populateTable();
-						setupPagination();
-					};
-					pagination.appendChild(pageButton);
-				}
-
-				// Next Button
-				const nextButton = document.createElement("button");
-				nextButton.innerText = "Next";
-				nextButton.className = "btn btn-secondary mx-1";
-				nextButton.disabled = currentPage === totalPages; // Disable if on the last page
-				nextButton.onclick = () => {
-					if (currentPage < totalPages) {
-						currentPage++;
-						populateTable();
-						setupPagination();
-					}
-				};
-				pagination.appendChild(nextButton);
-			}
-
-			function showDetails(id) {
-				const location = locations.find((loc) => loc.id === id);
-				const detailsContent = document.getElementById("details-content");
-				if (!location) {
-					detailsContent.innerHTML = `<p class="text-danger">Location details not found!</p>`;
-					return;
-				}
-
-				const thumbnail = location.images[0];
-				const dataImages = location.images
-					.slice(1)
-					.map((image) => `<img id="data-images" src="${image}" alt="alt" />`)
-					.join("");
-				detailsContent.innerHTML = `
-						<div class="row align-items-center border rounded p-5">
-							<div class="col-md-6">
-									<h2><strong>${location.name}</strong></h2>
-									<p class="text-primary"><strong>${location.category}</strong></p>
-									<p>${location.description}</p>
-							</div>
-							<div class="col-md-6 d-flex flex-column">
-								<div class="ms-auto">
-									<button class="btn btn-danger mb-3" onclick="hideDetails()">Close</button>
-								</div>
-								<p>Address: ${location.address}</p>
-								<p>Price: ${location.price}</p>
-								<p>Jam Buka: ${location.openHours}</p>
-							</div>
-							<div class="d-flex justify-content-center mt-4">
-									<img id="data-thumbnail" src="${thumbnail}" alt="${location.name}" class="img-fluid" />
-							</div>
-							<div class="d-flex flex-wrap justify-content-center mt-4">
-								${dataImages}
-							</div>
-						</div
-            `;
-
-				document.getElementById("details").style.display = "block";
-			}
-
-			function hideDetails() {
-				document.getElementById("details").style.display = "none";
-			}
-
-			fetchLocations();
-		</script>
+		<!-- Main JS File -->
+		<script src="assets/js/main.js"></script>
 	</body>
 </html>
