Update index.html bagian jelajahi button

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             <h1>Sistem Informasi Geografis Wisata Kota <span>Semarang</span></h1>
             <p>Website untuk Kota Semarang menyediakan informasi interaktif tentang destinasi wisata, memudahkan pengunjung untuk menjelajahi keindahan Semarang dengan peta dan panduan yang lengkap.</p>
             <div class="d-flex">
-              <a href="#about" class="btn-get-started">Jelajahi</a>
+              <a href="#mapssem" class="btn-get-started">Jelajahi</a>
               <a href="https://youtu.be/rgjIY7FKBkQ" class="glightbox btn-watch-video d-flex align-items-center"><i class="bi bi-play-circle"></i><span>Tonton Video Profil Kota Semarang</span></a>
             </div>
           </div>
