add nurul's photo and add default social link

--- a/index.html
+++ b/index.html
@@ -486,10 +486,10 @@
                   <div class="team-img position-relative overflow-hidden">
                       <img class="img-fluid w-100" src="assets/img/team/gilang.jpg" alt="">
                       <div class="team-social">
-                          <a class="btn btn-lg btn-primary btn-lg-square rounded" href=""><i class="fab fa-twitter fw-normal"></i></a>
-                          <a class="btn btn-lg btn-primary btn-lg-square rounded" href=""><i class="fab fa-facebook-f fw-normal"></i></a>
-                          <a class="btn btn-lg btn-primary btn-lg-square rounded" href=""><i class="fab fa-instagram fw-normal"></i></a>
-                          <a class="btn btn-lg btn-primary btn-lg-square rounded" href=""><i class="fab fa-linkedin-in fw-normal"></i></a>
+                        <a class="btn btn-lg btn-primary btn-lg-square rounded" href="https://x.com/"><i class="fab fa-twitter fw-normal"></i></a>
+                        <a class="btn btn-lg btn-primary btn-lg-square rounded" href="https://www.facebook.com/"><i class="fab fa-facebook-f fw-normal"></i></a>
+                        <a class="btn btn-lg btn-primary btn-lg-square rounded" href="https://www.instagram.com/"><i class="fab fa-instagram fw-normal"></i></a>
+                        <a class="btn btn-lg btn-primary btn-lg-square rounded" href="https://www.linkedin.com/"><i class="fab fa-linkedin-in fw-normal"></i></a>
                       </div>
                   </div>
                   <div class="text-center py-4">
@@ -503,10 +503,10 @@
                   <div class="team-img position-relative overflow-hidden">
                       <img class="img-fluid w-100" src="assets/img/team/alya.jpg" alt="">
                       <div class="team-social">
-                          <a class="btn btn-lg btn-primary btn-lg-square rounded" href=""><i class="fab fa-twitter fw-normal"></i></a>
-                          <a class="btn btn-lg btn-primary btn-lg-square rounded" href=""><i class="fab fa-facebook-f fw-normal"></i></a>
-                          <a class="btn btn-lg btn-primary btn-lg-square rounded" href=""><i class="fab fa-instagram fw-normal"></i></a>
-                          <a class="btn btn-lg btn-primary btn-lg-square rounded" href=""><i class="fab fa-linkedin-in fw-normal"></i></a>
+                          <a class="btn btn-lg btn-primary btn-lg-square rounded" href="https://x.com/"><i class="fab fa-twitter fw-normal"></i></a>
+                          <a class="btn btn-lg btn-primary btn-lg-square rounded" href="https://www.facebook.com/"><i class="fab fa-facebook-f fw-normal"></i></a>
+                          <a class="btn btn-lg btn-primary btn-lg-square rounded" href="https://www.instagram.com/"><i class="fab fa-instagram fw-normal"></i></a>
+                          <a class="btn btn-lg btn-primary btn-lg-square rounded" href="https://www.linkedin.com/"><i class="fab fa-linkedin-in fw-normal"></i></a>
                       </div>
                   </div>
                   <div class="text-center py-4">
@@ -520,10 +520,10 @@
                   <div class="team-img position-relative overflow-hidden">
                       <img class="img-fluid w-100" src="assets/img/team/muchtar.jpg" alt="">
                       <div class="team-social">
-                          <a class="btn btn-lg btn-primary btn-lg-square rounded" href=""><i class="fab fa-twitter fw-normal"></i></a>
-                          <a class="btn btn-lg btn-primary btn-lg-square rounded" href=""><i class="fab fa-facebook-f fw-normal"></i></a>
-                          <a class="btn btn-lg btn-primary btn-lg-square rounded" href=""><i class="fab fa-instagram fw-normal"></i></a>
-                          <a class="btn btn-lg btn-primary btn-lg-square rounded" href=""><i class="fab fa-linkedin-in fw-normal"></i></a>
+                        <a class="btn btn-lg btn-primary btn-lg-square rounded" href="https://x.com/"><i class="fab fa-twitter fw-normal"></i></a>
+                        <a class="btn btn-lg btn-primary btn-lg-square rounded" href="https://www.facebook.com/"><i class="fab fa-facebook-f fw-normal"></i></a>
+                        <a class="btn btn-lg btn-primary btn-lg-square rounded" href="https://www.instagram.com/"><i class="fab fa-instagram fw-normal"></i></a>
+                        <a class="btn btn-lg btn-primary btn-lg-square rounded" href="https://www.linkedin.com/"><i class="fab fa-linkedin-in fw-normal"></i></a>
                       </div>
                   </div>
                   <div class="text-center py-4">
@@ -535,12 +535,12 @@
           <div class="col-lg-4 wow slideInUp" data-wow-delay="0.9s">
             <div class="team-item bg-light rounded overflow-hidden">
                 <div class="team-img position-relative overflow-hidden">
-                    <img class="img-fluid w-100" src="assets/img/team-3.jpg" alt="">
+                    <img class="img-fluid w-100" src="assets/img/team/nurul.jpg" alt="">
                     <div class="team-social">
-                        <a class="btn btn-lg btn-primary btn-lg-square rounded" href=""><i class="fab fa-twitter fw-normal"></i></a>
-                        <a class="btn btn-lg btn-primary btn-lg-square rounded" href=""><i class="fab fa-facebook-f fw-normal"></i></a>
-                        <a class="btn btn-lg btn-primary btn-lg-square rounded" href=""><i class="fab fa-instagram fw-normal"></i></a>
-                        <a class="btn btn-lg btn-primary btn-lg-square rounded" href=""><i class="fab fa-linkedin-in fw-normal"></i></a>
+                      <a class="btn btn-lg btn-primary btn-lg-square rounded" href="https://x.com/"><i class="fab fa-twitter fw-normal"></i></a>
+                      <a class="btn btn-lg btn-primary btn-lg-square rounded" href="https://www.facebook.com/"><i class="fab fa-facebook-f fw-normal"></i></a>
+                      <a class="btn btn-lg btn-primary btn-lg-square rounded" href="https://www.instagram.com/"><i class="fab fa-instagram fw-normal"></i></a>
+                      <a class="btn btn-lg btn-primary btn-lg-square rounded" href="https://www.linkedin.com/"><i class="fab fa-linkedin-in fw-normal"></i></a>
                     </div>
                 </div>
                 <div class="text-center py-4">
@@ -554,10 +554,10 @@
               <div class="team-img position-relative overflow-hidden">
                   <img class="img-fluid w-100" src="assets/img/team/annisa.JPG" alt="">
                   <div class="team-social">
-                      <a class="btn btn-lg btn-primary btn-lg-square rounded" href=""><i class="fab fa-twitter fw-normal"></i></a>
-                      <a class="btn btn-lg btn-primary btn-lg-square rounded" href=""><i class="fab fa-facebook-f fw-normal"></i></a>
-                      <a class="btn btn-lg btn-primary btn-lg-square rounded" href=""><i class="fab fa-instagram fw-normal"></i></a>
-                      <a class="btn btn-lg btn-primary btn-lg-square rounded" href=""><i class="fab fa-linkedin-in fw-normal"></i></a>
+                    <a class="btn btn-lg btn-primary btn-lg-square rounded" href="https://x.com/"><i class="fab fa-twitter fw-normal"></i></a>
+                    <a class="btn btn-lg btn-primary btn-lg-square rounded" href="https://www.facebook.com/"><i class="fab fa-facebook-f fw-normal"></i></a>
+                    <a class="btn btn-lg btn-primary btn-lg-square rounded" href="https://www.instagram.com/"><i class="fab fa-instagram fw-normal"></i></a>
+                    <a class="btn btn-lg btn-primary btn-lg-square rounded" href="https://www.linkedin.com/"><i class="fab fa-linkedin-in fw-normal"></i></a>
                   </div>
               </div>
               <div class="text-center py-4">
